--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <title>Go Echo Tests</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body>
