Validating protected endpoints with token. Silly details on frontend

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,12 @@
                 <p><input type="button" id="login" value="Login" /></p>
             </form>
         </div>
+        <div class="form-style-8 hid">
+            <h2>Go to a restricted area</h2>
+            <form id="form-restrict" method="GET" action="/users">
+                <p><input type="submit" id="btnRestricted" value="Go to Restricted!" /></p>
+            </form>
+        </div>
         <script src="assets/js/main.js"></script>
     </body>
 </html>
